--- a/umbrel-app-store.yml
+++ b/umbrel-app-store.yml
@@ -1,2 +1,2 @@
 id: "zpunks" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
-name: "zpunks" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
+name: "zpunks-umbrel" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
