--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,21 @@
 version: "3.7"
 
 services:
-
   app_proxy:
     environment:
       # The format here is: <app-id>_<docker-service-name>_1
-      APP_HOST: zpunks-hello-world_server_1
-      APP_PORT: 3000
+      APP_HOST: zpunks-blockstream-satellite_server_1
+      APP_PORT: 8080  # Replace this with the actual port used by Blockstream Satellite
     
   server:
-    image: getumbrel/community-app-store-hello-world:latest
+    image: zpunks/blockstream-satellite:latest  # Replace with the correct Docker image for Blockstream Satellite
     user: "1000:1000"
     init: true
+    volumes:
+      - data:/data  # Add volumes if Blockstream Satellite requires persistent storage
+    environment:
+      - SATELLITE_API_KEY=your_api_key  # Replace with any required environment variables
+      - OTHER_ENV_VAR=value  # Add other variables if needed
+
+volumes:
+  data:
