--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       # The format here is: <app-id>_<docker-service-name>_1
       APP_HOST: zpunks-blockstream-satellite_server_1
-      APP_PORT: 8080 
+      APP_PORT: 8080  # Ensure this matches the port used by Blockstream Satellite
 
   server:
     image: blockstream/satellite:latest
@@ -14,15 +14,15 @@ services:
     volumes:
       - blocksat-cfg:/root/.blocksat/
     devices:
-      - /dev/dvb/adapter0:/dev/dvb/adapter0
+      - /dev/dvb/adapter0:/dev/dvb/adapter0  # This is essential for the Base Station
     network_mode: host
     cap_add:
       - NET_ADMIN
       - SYS_ADMIN
     environment:
-      - SATELLITE_API_KEY=your_api_key
-      - OTHER_ENV_VAR=value
+      - SATELLITE_API_KEY=your_api_key  # Replace with your API key if required
+      # Add any additional environment variables required by the Blockstream Satellite app
+      - BLOCKSAT_DVB_ADAPTER=/dev/dvb/adapter0 # Specify the DVB adapter
 
 volumes:
   blocksat-cfg:
-
