Squashed commit of the following:
commit 744e47e25df4efc0ebc49c944a330918967fe726
Merge: 4dfe5bd 85e1df5
Author: zpunks <83688270+zpunks@users.noreply.github.com>
Date:   Thu Apr 10 02:54:16 2025 +0200

    Merge pull request #1 from zpunks/zpunks-umbrel-app-store-blockstream-satellite

    Zpunks umbrel app store blockstream satellite

commit 4dfe5bd0780857f00691ca5e2f593b97ffdd4d25
Author: zpunks <83688270+zpunks@users.noreply.github.com>
Date:   Sun Apr 6 06:09:18 2025 +0100

    Update temp.txt.

commit c4832809e34a4b5c8330ae5a8b378be5c751eee7
Author: zpunks <83688270+zpunks@users.noreply.github.com>
Date:   Sun Apr 6 06:01:36 2025 +0100

    Update umbrel-app.yml

commit 12d4b3c21ed658dc5898b794ce21da2d54c37e01
Author: zpunks <83688270+zpunks@users.noreply.github.com>
Date:   Sun Apr 6 05:53:10 2025 +0100

    Update docker-compose.yml

commit e714d4e6547e650d535f897d3983dc50f7cb6d06
Author: zpunks <83688270+zpunks@users.noreply.github.com>
Date:   Sun Apr 6 05:52:48 2025 +0100

    Update docker-compose.yml

commit 70b2115feed1e86aa3431ab109ba74da941769b4
Author: zpunks <83688270+zpunks@users.noreply.github.com>
Date:   Sun Apr 6 05:51:34 2025 +0100

    Update docker-compose.yml

commit 1664c03b294ffa1844fed3fe645e096d867adcde
Author: zpunks <83688270+zpunks@users.noreply.github.com>
Date:   Sun Apr 6 05:37:27 2025 +0100

    Update docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
-version: "3.7"
-
 services:
   app_proxy:
+    image: your-app-proxy-image:latest  # Replace with the actual image name
     environment:
-      APP_HOST: blockstream-satellite_server_1
-      APP_PORT: 8080  # Ensure this matches the port used by Blockstream Satellite
+      APP_HOST: server  # Updated to match the service name
+      APP_PORT: 8080
 
   server:
     image: blockstream/satellite:latest
     user: "1000:1000"
     init: true
     volumes:
-      - blocksat-cfg:/root/.blocksat/
+      - ~/.bitcoin/:/root/.bitcoin/  # Mount the Bitcoin data directory
+      - blocksat-cfg:/root/.blocksat/  # Mount the Blockstream Satellite config
     devices:
       - /dev/dvb/adapter0:/dev/dvb/adapter0
     network_mode: host
@@ -24,3 +24,4 @@ services:
 
 volumes:
   blocksat-cfg:
+
