--- a/umbrel-app.yml
+++ b/umbrel-app.yml
@@ -8,6 +8,7 @@ description: >-
   Blockstream Satellite enables Bitcoin blockchain data synchronization via satellite, providing access to the blockchain without requiring an internet connection.
 developer: Blockstream
 website: https://blockstream.com/satellite/
+repository: https://github.com/Blockstream/satellite
 icon: assets/satellite_emblem_on_dark_rgb.png
 dependencies:
   - bitcoin
