--- a/zpunks-pyramid/umbrel-app.yml
+++ b/zpunks-pyramid/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: mystore-pyramid
+id: zpunks-pyramid
 category: social
 name: Pyramid
 tagline: Your personal Nostr community relay
